exposing election results data
